igt@xe_live_ktest@xe_mocs@xe_live_mocs*kunit - fail - Test assertion failure function __igt_kunit, Failed assertion: !(r->code == 98)
Stdout
Starting dynamic subtest: xe_live_mocs_reset_kunit
Stack trace:
#0 ../../../usr/src/igt-gpu-tools/lib/igt_core.c:1989 __igt_fail_assert()
#1 ../../../usr/src/igt-gpu-tools/lib/igt_kmod.c:1303 __igt_kunit.isra.0()
#2 ../../../usr/src/igt-gpu-tools/lib/igt_kmod.c:1418 igt_kunit()
#3 ../../../usr/src/igt-gpu-tools/tests/intel/xe_live_ktest.c:46 main()
#4 [__libc_start_main+0xf3]
#5 [_start+0x2e]
Dynamic subtest xe_live_mocs_reset_kunit: FAIL (0.074s)
Subtest xe_mocs: FAIL (0.295s)
Stderr
Starting dynamic subtest: xe_live_mocs_reset_kunit
(xe_live_ktest:1441) igt_kmod-CRITICAL: Test assertion failure function __igt_kunit, file ../../../usr/src/igt-gpu-tools/lib/igt_kmod.c:1304:
(xe_live_ktest:1441) igt_kmod-CRITICAL: Failed assertion: !(r->code == 98)
Dynamic subtest xe_live_mocs_reset_kunit failed.
**** DEBUG ****
(xe_live_ktest:1441) igt_kmod-DEBUG: condition strcmp(r->case_name, t->case_name) occurred in function __igt_kunit, file ../../../usr/src/igt-gpu-tools/lib/igt_kmod.c:1262
(xe_live_ktest:1441) igt_kmod-DEBUG: case_name expected: xe_live_mocs_reset_kunit, got: xe_live_mocs_kernel_kunit
(xe_live_ktest:1441) igt_ktap-DEBUG: Condition sscanf(buf, "%*1[ ]%*1[ ]%*1[ ]%*1[ ]not%*1[ ]ok%*[ ]%u%*[ ]%ms %n", &n, &case_name, &len) == 2 && len == strlen(buf) occurred in function igt_ktap_parse, file ../../../usr/src/igt-gpu-tools/lib/igt_ktap.c:206
(xe_live_ktest:1441) igt_kmod-DEBUG: Test requirement passed: !(r->code == IGT_EXIT_SKIP)
(xe_live_ktest:1441) igt_kmod-CRITICAL: Test assertion failure function __igt_kunit, file ../../../usr/src/igt-gpu-tools/lib/igt_kmod.c:1304:
(xe_live_ktest:1441) igt_kmod-CRITICAL: Failed assertion: !(r->code == 98)
(xe_live_ktest:1441) igt_core-INFO: Stack trace:
(xe_live_ktest:1441) igt_core-INFO: #0 ../../../usr/src/igt-gpu-tools/lib/igt_core.c:1989 __igt_fail_assert()
(xe_live_ktest:1441) igt_core-INFO: #1 ../../../usr/src/igt-gpu-tools/lib/igt_kmod.c:1303 __igt_kunit.isra.0()
(xe_live_ktest:1441) igt_core-INFO: #2 ../../../usr/src/igt-gpu-tools/lib/igt_kmod.c:1418 igt_kunit()
(xe_live_ktest:1441) igt_core-INFO: #3 ../../../usr/src/igt-gpu-tools/tests/intel/xe_live_ktest.c:46 main()
(xe_live_ktest:1441) igt_core-INFO: #4 [__libc_start_main+0xf3]
(xe_live_ktest:1441) igt_core-INFO: #5 [_start+0x2e]
**** END ****
Dynamic subtest xe_live_mocs_reset_kunit: FAIL (0.074s)
Subtest xe_mocs: FAIL (0.295s)
Dmesg
<6> [239.209181] [IGT] xe_live_ktest: starting dynamic subtest xe_live_mocs_reset_kunit
<7> [239.209195] xe 0000:00:02.0: [drm:read_l3cc_table [xe]] 23 0xb07c 0x300030 0x300030
<7> [239.209253] xe 0000:00:02.0: [drm:read_l3cc_table [xe]] 24 0xb080 0x300030 0x300030
<7> [239.209310] xe 0000:00:02.0: [drm:read_l3cc_table [xe]] 25 0xb084 0x100010 0x100010
<7> [239.209368] xe 0000:00:02.0: [drm:read_l3cc_table [xe]] 26 0xb088 0x300030 0x300030
<7> [239.209426] xe 0000:00:02.0: [drm:read_l3cc_table [xe]] 27 0xb08c 0x300030 0x300030
<7> [239.209484] xe 0000:00:02.0: [drm:read_l3cc_table [xe]] 28 0xb090 0x300030 0x300030
<7> [239.209541] xe 0000:00:02.0: [drm:read_l3cc_table [xe]] 29 0xb094 0x300030 0x300030
<7> [239.209599] xe 0000:00:02.0: [drm:read_l3cc_table [xe]] 30 0xb098 0x300010 0x300010
<7> [239.209657] xe 0000:00:02.0: [drm:read_l3cc_table [xe]] 31 0xb09c 0x100010 0x100010
<6> [239.209725] xe 0000:00:02.0: [drm] GT0: trying reset
<6> [239.209732] xe 0000:00:02.0: [drm] GT0: reset queued
<6> [239.209936] xe 0000:00:02.0: [drm] GT0: reset started
<7> [239.210438] xe 0000:00:02.0: [drm:xe_reg_sr_apply_mmio [xe]] GT0: Applying GT save-restore MMIOs
<7> [239.210488] xe 0000:00:02.0: [drm:xe_reg_sr_apply_mmio [xe]] GT0: REG[0x9424] = 0xfffffffc
<7> [239.210534] xe 0000:00:02.0: [drm:xe_reg_sr_apply_mmio [xe]] GT0: REG[0x9550] = 0x000003ff
<7> [239.210577] xe 0000:00:02.0: [drm:xe_wopcm_init [xe]] WOPCM: 2048K
<7> [239.210624] xe 0000:00:02.0: [drm:xe_wopcm_init [xe]] GuC WOPCM is already locked [592K, 1420K)